#11377 closed defect (fixed)

[vist#0:0/av1 @ 0x12c607650] [dec:libdav1d @ 0x12c6085e0] Task finished with error code: -558323010 (Internal bug, should not have happened)

Reported by: eram Owned by:
Priority: normal Component: avcodec
Version: git-master Keywords:
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: yes

Description (last modified by eram)

Summary of the bug:
How to reproduce:

% ffmpeg -y -nostdin -i return_code-558323010.mp4 -c:v libx264 -preset ultrafast -c:a aac -report converted.mp4

Patches should be submitted to the ffmpeg-devel mailing list and not this bug tracker.

See log which is attached.

Attachments (2)

ffmpeg.log (13.0 KB ) - added by eram 20 months ago.
ffmpeg-20241226-001705.log.zip (215.8 KB ) - added by eram 20 months ago.

Download all attachments as: .zip

Change History (7)

by eram, 20 months ago

Attachment: ffmpeg.log added

comment:1 by eram, 20 months ago

Description: modified (diff)

in reply to:  2 ; comment:3 by James, 20 months ago

Replying to eram:

file:
https://mega.nz/file/4SYjXbgJ#6qD1c2fWeCpCZHsATJkoTJknhiSmDYlgUc5u97rgdgg

This is a 1.75gb file that i can't even download without a paid account. Seeing the issue appears to be around the 5682 frame mark, can you trim it and upload that instead?

in reply to:  3 comment:4 by eram, 20 months ago

This is a 1.75gb file that i can't even download without a paid account. Seeing the issue appears to be around the 5682 frame mark, can you trim it and upload that instead?

That file is free to download, not even being registered is required, but it's possible that you've consumed all free bandwidth which will be reseted after a while.

Here's another mirror and please don't complain about file sizes, I don't trim it because there may be other issuer down the line which you could find out.

Unzip it.

https://www.dropbox.com/scl/fi/4huj596dm7ef4ttvw9gzs/return_code-558323010.mp4.zip?rlkey=4ietpfztu483o05v4dyzjwmc1&st=iouqhr72&dl=0

comment:5 by James, 20 months ago

Analyzed by developer: set
Component: undeterminedavcodec
Reproduced by developer: set
Resolution: fixed
Status: newclosed
Version: unspecifiedgit-master
Note: See TracTickets for help on using tickets.